# Constance

./: .eslintrc.json  .gitignore  .prettierrc  README.md  er_profile_data  openapi.yaml  package-lock.json  pyproject.toml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/components/Advertisement/: Advertisement.jsx  Advertisement.module.css  AdvertisementContainer.jsx
client/src/components/App/: App.jsx  App.module.css
client/src/components/Background/: Background.jsx  Background.module.css
client/src/components/Footer/: Footer.jsx  Footer.module.css
client/src/components/Header/: Header.jsx  Header.module.css  HeaderContainer.jsx
client/src/components/Home/: Home.jsx  Home.module.css  HomeContainer.jsx
client/src/global_logic/: userEnter.js
client/src/redux/: advertisementReducer.js  authReducer.js  characteristicsReducer.js  enteredReducer.js  homeReducer.js  loginReducer.js  myProfileReducer.js  navbarReducer.js  preferencesReducer.js  searchReducer.js  signupReducer.js  store.js  watchProfileReducer.js
server/: add_profile_image.py  analyzer.py  for_JWT_generating.py  for_bd_connect.py  for_db_connect.py  getter_of_rates.py  host_client.py  initializator_for_bd_devel.py  lint.cfg  main.py  properties_data.json  validators.py
server/client_build/: asset-manifest.json  index.html
server/static/: properties_data.json
tests/: test_add_profile_image.py  test_analyzer.py  test_for_JWT_generating.py  test_for_bd_connect.py  test_validators.py
(+80 files in other folders)
